# $Id$

2007-11-12	Dmitry E. Pismenny

	* main/Markup/Feed/FeedReader.class.php: errors from simplexml_load_file()
	translated into WrongStateExceptions.

2007-11-07	Ivan Y. Khvostishkov

	* main/Utils/TextUtils.class.php: friendlyNumber(): bug with small
	orders fixed.

2007-11-02	Vladimir A. Altuchov

	* main/Utils/IO/FileReader.class.php: new reader added.

2007-11-02	Konstantin V. Arkhipov

	* main/DAOs/StorableDAO.class.php: inject() now checks affected rows
	count for sanity.

2007-11-01	Vladimir A. Altuchov

	* main/Markup/Feed/AtomItemWorker.class.php,
	main/Markup/Feed/RssItemWorker.class.php,
	main/Markup/Feed/FeedItem.class.php: id field added.

2007-10-31	Dmitry E. Pismenny

	* core/Form/Primitives/PrimitiveDate.class.php: PrimitiveDate::checkRanges()
	fixed.
	
2007-10-31	Dmitry A. Lomash

	* main/Net/IpRange.class.php: added setters, dropped final declaration.

2007-10-30	Konstantin V. Arkhipov

	* meta/classes/MetaConfiguration.class.php: class name collision
	detection added.

2007-10-26	Vladimir A. Altuchov

	* core/Cache/WatermarkedPeer.class.php: add setter for watermark label.

2007-10-25	Denis M. Gabaidulin

	* main/Flow/RedirectToView.class.php: constructor fixed.

2007-10-24	Konstantin V. Arkhipov

	* core/Form/Form.class.php: markGood() and markWrong() now supports
	rules marking.

	* main/Criteria/Criteria.class.php: field duplication eliminated for
	enumeration's childs.

2007-10-20	Konstantin V. Arkhipov

	* 0.10.7 released.

2007-10-16	Konstantin V. Arkhipov

	* main/DAOs/Handlers/FileSystemSegmentHandler.class.php: drop() now
	uses FileUtils' removeDirectory.

	* main/DAOs/Workers/TransparentDaoWorker.class.php,
	main/DAOs/Handlers/: no more hardcoded precision, platform-dependent
	computation implemented.

2007-10-14	Konstantin V. Arkhipov

	* 0.10.6 released.

2007-10-11	Ivan Y. Khvostishkov

	* main/Net/GenericUri.class.php: toStringFromRoot() - url without
	scheme and authority part.

2007-10-10	Denis M. Gabaidulin
